# eecs545_hw4

./: captioning_solver.py  cnn.ipynb  cnn.py  cnn_layers.py  hw4_writeup.tex  pyproject.toml  rnn.ipynb  rnn.py  rnn_layers.py  transfer_learning.ipynb  transfer_learning.py  transformer.ipynb  transformer.py  transformer_trainer.py
.ipynb_checkpoints/: cnn-checkpoint.ipynb  rnn-checkpoint.ipynb  transformer-checkpoint.ipynb
.latexmk/aux/: hw4_writeup.fdb_latexmk  hw4_writeup.fls  lualatex163688.fls
