[project]
name = "hw4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "future>=1.0.0",
    "h5py>=3.13.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "numpy==1.24.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
